<resources>
    <string name="app_name">Healthy</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="usernamelogin">username</string>
    <string name="passwordlogin">password</string>
    <string name="login">Login</string>
    <string name="creatinglogin">Don\'t have an account?</string>
    <string name="confirm_password">confirm password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log in</string>
    <string name="create_account">Create account</string>
    <string name="name">Name</string>
    <string name="username">username</string>
    <string name="profile">Profile</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="log_out">Log out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo">logo</string>
    <string name="exercise">Exercise</string>
    <string name="meditation">Meditation</string>
    <string name="home">Home</string>
    <string name="water">Water</string>
    <string name="fasting">Fasting</string>
    <string name="meditation_qoute">“Meditation is like a gym in which you develop the powerful mental muscles of calm and insight.”</string>
    <string name="meditation_duration">Duration</string>
    <string name="water_qoute">Your body is about 60% water. Keep it well hydrated! Health officials recommend drinking at least 2 liters of water daily, or 8 250ml glasses per day.</string>

</resources>